syntax = "proto3";
option go_package = "api/proto/order";

package order;

service Order {
  rpc Ping (EmptyMessage) returns (PingResponse) {}
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc RemoveOrder (RemoveOrderRequest) returns (EmptyMessage) {}
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}
  rpc AddItem (AddItemRequest) returns (EmptyMessage) {}
  rpc RemoveItem (RemoveItemRequest) returns (EmptyMessage) {}
  rpc Checkout (CheckoutRequest) returns (EmptyMessage) {}
}

message CreateOrderRequest {
  bytes userId = 1;
}

message CreateOrderResponse {
  bytes orderId = 1;
}

message RemoveOrderRequest {
  bytes orderId = 1;
}


message GetOrderRequest {
  bytes orderId = 1;
}

message GetOrderResponse {
  bytes orderId = 1;
  bool paid = 2;
  bytes userId = 3;
  float totalCost = 4;
  repeated bytes itemIds = 5;
}

message AddItemRequest {
  bytes orderId = 1;
  bytes itemId = 2;
}

message RemoveItemRequest {
  bytes orderId = 1;
  bytes itemId = 2;
}

message CheckoutRequest {
  bytes orderId = 1;
}

message PingResponse {
  string message = 1;
}

message EmptyMessage {}

